[project]
name = "rlm-research"
version = "0.1.0"
description = "Independent Research Lab for RLM-Toolkit"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"

dependencies = [
    "rlm-toolkit>=2.0.0",
    "numpy>=1.24",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "tqdm>=4.65",
]

[project.optional-dependencies]
research = [
    "mlflow>=2.10",
    "wandb>=0.16",
    "jupyter>=1.0",
    "scikit-learn>=1.4",
    "faiss-cpu>=1.7",
]

dev = ["pytest>=7.4", "pytest-cov>=4.1", "black>=24.0", "ruff>=0.1"]

[project.scripts]
rlm-bench = "rlm_research.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
