[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rlm-toolkit"
version = "1.0.0"
description = "Recursive Language Models Toolkit for processing unlimited context"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "SENTINEL Community", email = "rlm@sentinel.dev" }]
keywords = ["llm", "recursive", "language-models", "long-context", "rlm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = ["pyyaml>=6.0"]

[project.optional-dependencies]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.20"]
google = ["google-generativeai>=0.5"]
ollama = ["ollama>=0.1"]
langfuse = ["langfuse>=2.0"]
langsmith = ["langsmith>=0.1"]
all = [
    "openai>=1.0",
    "anthropic>=0.20",
    "google-generativeai>=0.5",
    "ollama>=0.1",
    "langfuse>=2.0",
    "langsmith>=0.1",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1",
    "mypy>=1.0",
    "bandit>=1.7",
    "build>=1.0",
    "twine>=4.0",
]

[project.scripts]
rlm = "rlm_toolkit.cli.main:main"

[project.urls]
Homepage = "https://github.com/sentinel-community/rlm-toolkit"
Documentation = "https://rlm-toolkit.readthedocs.io"
Repository = "https://github.com/sentinel-community/rlm-toolkit"
Issues = "https://github.com/sentinel-community/rlm-toolkit/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["rlm_toolkit*"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow",
    "security: marks security tests",
    "integration: marks integration tests",
]

[tool.coverage.run]
source = ["rlm_toolkit"]
omit = ["*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
