[package]
name = "sentinel-desktop"
version = "0.1.0"
description = "SENTINEL Desktop - AI Traffic Protection for Windows"
authors = ["SENTINEL Team"]
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "sentinel_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Network interception - using latest from GitHub fork (0.10)
windivert = { path = "windivert-fork/windivert", features = ["vendored"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client for Brain API
reqwest = { version = "0.12", features = ["json"] }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# File dialog (native Rust)
rfd = "0.15"

# Directory paths
dirs = "6"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_Networking_WinSock",
    "Win32_NetworkManagement_IpHelper",
    "Win32_Networking_WinInet",
] }
winreg = "0.52"

# Detection engines
[dependencies.regex]
version = "1"

[dependencies.once_cell]
version = "1"

[dependencies.sha2]
version = "0.10"

# TLS Proxy Module
[dependencies.ring]
version = "0.17"

[dependencies.rustls]
version = "0.23"
default-features = false
features = ["ring", "std", "tls12"]

[dependencies.tokio-rustls]
version = "0.26"
default-features = false
features = ["ring"]

[dependencies.rcgen]
version = "0.13"
features = ["pem"]

[dependencies.rustls-pemfile]
version = "2"

[dependencies.hyper]
version = "1"
features = ["server", "http1", "http2"]

[dependencies.hyper-util]
version = "0.1"
features = ["tokio", "server", "server-auto"]

[dependencies.http-body-util]
version = "0.1"

[dependencies.bytes]
version = "1"

[dependencies.webpki-roots]
version = "0.26"

[dependencies.time]
version = "0.3"

# User-space TCP/IP stack for transparent proxy
[dependencies.netstack-smoltcp]
version = "0.2"

[dependencies.smoltcp]
version = "0.12"
default-features = false
features = ["medium-ip", "socket-tcp"]

[dependencies.futures-util]
version = "0.3"

# Packet parsing and checksums (mitmproxy-style)
[dependencies.internet-packet]
version = "0.2"
features = ["checksums"]
